force-app/main/default/objects/OrderMergeBatchSettings__c/OrderMergeBatchSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for the Order Merge Batch job.</description>
    <label>Order Merge Batch Settings</label>
</CustomObject>