force-app/main/default/objects/OrderMergeBatchSettings__c/fields/Order_Item_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Field_Set__c</fullName>
    <label>Order Item Field Set</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>