force-app/main/default/objects/OrderMergeBatchSettings__c/fields/Order_Item_Filter_Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Filter_Product_Codes__c</fullName>
    <description>Comma-delimited list of Order Item Product Codes to filter out.</description>
    <inlineHelpText>Comma-delimited list of Order Item Product Codes to filter out.</inlineHelpText>
    <label>Order Item Filter Product Codes</label>
    <type>TextArea</type>
</CustomField>