force-app/main/default/objects/OrderMergeBatchSettings__c/fields/Order_Item_Filters__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Filters__c</fullName>
    <description>Comma-delimited list of filters to apply. Filter options include: LastAutomationCreatedDateOrderItemFilter, LastInflightWODateOrderItemFilter, FrequencyOrderItemFilter, ActiveOrderItemFilter.</description>
    <label>Order Item Filters</label>
    <type>TextArea</type>
</CustomField>